--- a/GameOfThrones/css/main.css
+++ b/GameOfThrones/css/main.css
@@ -1,13 +1,8 @@
 /*Global styles */
 @font-face {
-  font-family: 'game-of-thrones';
-  src: url('/font/Game\ of\ Thrones.ttf') 
-
+  font-family: "game-of-thrones";
+  src: url("/font/Game\ of\ Thrones.ttf");
 }
-
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
 
 html,
 body {
@@ -19,7 +14,7 @@ body {
   background-image: url(/img/crows.jpeg);
   background-size: cover;
   color: #ededed;
-  font: 100% 'Crimson Text', serif;
+  font: 100% "Crimson Text", serif;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -27,81 +22,123 @@ body {
   max-width: 100vw;
 }
 
-.modal{
+.modal {
   display: block;
   position: fixed;
-  z-index: 1; 
-  width: 100%; 
+  z-index: 1;
+  width: 100%;
   height: 100%;
-  overflow: auto; 
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-.close{
+.close {
   color: #3d3d3d;
   float: right;
   font-size: 2.5rem;
   font-weight: bold;
-  cursor: pointer;
   padding: 0;
   width: 10%;
   border: none;
 }
 
+@keyframes loader {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loader:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  border-top-color: #394d71;
+  border-bottom-color: #394d71;
+  animation: loader 0.8s ease infinite;
+}
+
 /*Typography */
 
-button{
-  font-family: 'Crimson Text', serif;
-  font-size: 1.4rem;
+button,
+a {
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
 button:hover,
-a:hover{
+a:hover {
   transform: scale(1.035);
   transition: all 0.25s ease-in-out;
+  cursor: pointer;
 }
 
-
-
-body{
-  font-family: 'Crimson Text', serif;
+button:disabled,
+a:disabled {
+  cursor: not-allowed;
 }
 
-h1{
+button:disabled:hover,
+a:disabled:hover {
+  cursor: not-allowed;
+  transform: none;
+}
 
+body {
+  font-family: "Crimson Text", serif;
+}
+
+h1 {
   font-size: 3.5rem;
   text-align: center;
   margin: 60px auto;
   color: silver;
-  font-family: 'game-of-thrones';
+  font-family: "game-of-thrones";
 }
 
-h3{
+h2 {
+  font-size: 2.2rem;
+}
+
+h3 {
   text-align: center;
+  font-size: 2rem;
 }
 
-p{
-  font-size: 1.5rem;
+h4 {
+  font-size: 1.6rem;
+  margin: 16px 0;
+}
 
+h5 {
+  font-size: 1.4rem;
+  margin: 8px;
+}
+
+p {
+  font-size: 1.3rem;
 }
 
 /*Layout */
 
-
-
-footer{
-    width: 100%;
-    text-align: center;
-    color: #ffffff;
-    font-size: 1rem;
-    margin-top: 32px;
+footer {
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-size: 1rem;
+  margin-top: 32px;
 }
 
-
-@media only screen and (max-width: 767px){
-  h1{
+@media only screen and (max-width: 767px) {
+  h1 {
     font-size: 2.5rem;
   }
 }
