--- a/GameOfThrones/css/main.css
+++ b/GameOfThrones/css/main.css
@@ -14,12 +14,21 @@ body {
   background-image: url(/img/crows.jpeg);
   background-size: cover;
   color: #ededed;
+  font-family: "Crimson Text", serif;
   font: 100% "Crimson Text", serif;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
   max-width: 100vw;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-size: 1rem;
+  margin-top: 32px;
 }
 
 .modal {
@@ -33,6 +42,8 @@ body {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+/* Buttons */
+
 .close {
   color: #3d3d3d;
   float: right;
@@ -43,35 +54,11 @@ body {
   border: none;
 }
 
-@keyframes loader {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.loader:before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  top: 80%;
-  left: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: -10px;
-  margin-left: -10px;
-  border-radius: 50%;
-  border: 2px solid transparent;
-  border-top-color: #394d71;
-  border-bottom-color: #394d71;
-  animation: loader 0.8s ease infinite;
-}
-
-/*Typography */
-
 button,
 a {
   font-size: 1.5rem;
   cursor: pointer;
+  font-family: "Crimson Text", serif;
 }
 
 button:hover,
@@ -84,6 +71,7 @@ a:hover {
 button:disabled,
 a:disabled {
   cursor: not-allowed;
+  filter: brightness(0.6);
 }
 
 button:disabled:hover,
@@ -92,9 +80,7 @@ a:disabled:hover {
   transform: none;
 }
 
-body {
-  font-family: "Crimson Text", serif;
-}
+/*Typography */
 
 h1 {
   font-size: 3.5rem;
@@ -125,16 +111,6 @@ h5 {
 
 p {
   font-size: 1.3rem;
-}
-
-/*Layout */
-
-footer {
-  width: 100%;
-  text-align: center;
-  color: #ffffff;
-  font-size: 1rem;
-  margin-top: 32px;
 }
 
 @media only screen and (max-width: 767px) {
